<?xml version="1.0" encoding="utf-8"?>
<com.daprlabs.cardstack.SwipeFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:swipedeck="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/toolbar_margin"
    android:background="@color/theme_clr"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/no_data"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_no_data"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"


            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_gravity="center"
                android:gravity="center"

                android:orientation="vertical">

                <com.daprlabs.cardstack.SwipeDeck
                    android:id="@+id/swipe_deck"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    swipedeck:card_spacing="10dp"
                    swipedeck:max_visible="5"
                    swipedeck:opacity_end="0.2"
                    swipedeck:render_above="true"
                    swipedeck:rotation_degrees="15" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|bottom"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/ad_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"

                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />

                <LinearLayout
                    android:id="@+id/btns_lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ad_view"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen5"
                        android:layout_weight="1"
                        android:background="@drawable/ellipse_green"
                        android:text="@string/cancel"
                        android:textColor="@color/white_clr" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen5"
                        android:layout_weight="1"
                        android:background="@drawable/ellipse_fb_blue_rect"
                        android:onClick="onNext"
                        android:text="@string/next"
                        android:textColor="@color/white_clr" />

                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</com.daprlabs.cardstack.SwipeFrameLayout>